去掉分页功能，表格完全显示所有数据

--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,7 @@
             // Initialize DataTable
             $(document).ready(function() {
                 $('#quoteTable').DataTable({
-                    paging: true,
+                    paging: false,
                     searching: true,
                     ordering: true,
                     columnDefs: [
